--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,7 @@
 [run]
 branch = True
 [report]
-exclude_lines =
-    raise NotImplementedError.*
+exclude_lines = NotImplementedError
+
+branch = True
+[report]
