--- a/docs/source/theme/smithy/theme.conf
+++ b/docs/source/theme/smithy/theme.conf
@@ -13,5 +13,5 @@ dark_accent = #283D3B
 site_background = #fff
 link_color = #00818e;
 regular_font = -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
-code_font = "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace
+google_analytics_id = UA-XXXXX-YRegular", Consolas, "Liberation Mono", Menlo, Courier, monospace
 ga_id =
